--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                         <!-- Start Navbar -->
                         <nav class="navbar navbar-expand-lg">
                             <a class="navbar-brand" href="index.html">
-                                <img src="assets/images/logo/white-logo.svg" alt="Logo">
+                                <img src="assets/images/logo/logopremiky.jpg" alt="Logo">
                             </a>
                             <button class="navbar-toggler mobile-menu-btn" type="button" data-bs-toggle="collapse"
                                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -95,7 +95,7 @@
                                 </ul>
                             </div> <!-- navbar collapse -->
                             <div class="button add-list-button">
-                                <a href="javascript:void(0)" class="btn">Get it now</a>
+                                <a href="javascript:void(0)" class="btn">Entrar</a>
                             </div>
                         </nav>
                         <!-- End Navbar -->
@@ -112,7 +112,7 @@
             <div class="row align-items-center">
                 <div class="col-lg-5 col-md-12 col-12">
                     <div class="hero-content">
-                        <h1 class="wow fadeInLeft" data-wow-delay=".4s">A powerful app for your business.</h1>
+                        <h1 class="wow fadeInLeft" data-wow-delay=".4s">El Medio Indicado Para Formar Conexiones.</h1>
                         <p class="wow fadeInLeft" data-wow-delay=".6s">From open source to pro services, Piqes helps you
                             to build, deploy, test, and monitor apps.</p>
                         <div class="button wow fadeInLeft" data-wow-delay=".8s">
