--- a/index.html
+++ b/index.html
@@ -150,8 +150,8 @@
                 <div class="col-lg-4 col-md-6 col-12">
                     <!-- Start Single Feature -->
                     <div class="single-feature wow fadeInUp" data-wow-delay=".2s">
-                        <i class="lni lni-cloud-upload"></i>
-                        <h3>Push to Deploy</h3>
+                        <i class="lni lni-calendar"></i>
+                        <h3>Calendario</h3>
                         <p>It is a long established fact that a reader will be distracted by the readable content of a
                             page at its layout.</p>
                     </div>
@@ -161,7 +161,7 @@
                     <!-- Start Single Feature -->
                     <div class="single-feature wow fadeInUp" data-wow-delay=".4s">
                         <i class="lni lni-lock"></i>
-                        <h3>SSL Certificates</h3>
+                        <h3>Protejemos sus Datos</h3>
                         <p>It is a long established fact that a reader will be distracted by the readable content of a
                             page at its layout.</p>
                     </div>
@@ -170,8 +170,8 @@
                 <div class="col-lg-4 col-md-6 col-12">
                     <!-- Start Single Feature -->
                     <div class="single-feature wow fadeInUp" data-wow-delay=".6s">
-                        <i class="lni lni-reload"></i>
-                        <h3>Simple Queues</h3>
+                        <i class="lni lni-handshake"></i>
+                        <h3>Ganar Nuevos Clientes</h3>
                         <p>It is a long established fact that a reader will be distracted by the readable content of a
                             page at its layout.</p>
                     </div>
@@ -180,8 +180,8 @@
                 <div class="col-lg-4 col-md-6 col-12">
                     <!-- Start Single Feature -->
                     <div class="single-feature wow fadeInUp" data-wow-delay=".2s">
-                        <i class="lni lni-shield"></i>
-                        <h3>Advanced Security</h3>
+                        <i class="lni lni-stats-up"></i>
+                        <h3>Aumente sus Ventas</h3>
                         <p>It is a long established fact that a reader will be distracted by the readable content of a
                             page at its layout.</p>
                     </div>
@@ -191,7 +191,7 @@
                     <!-- Start Single Feature -->
                     <div class="single-feature wow fadeInUp" data-wow-delay=".4s">
                         <i class="lni lni-cog"></i>
-                        <h3>Powerful API</h3>
+                        <h3>Potentes Herramientas</h3>
                         <p>It is a long established fact that a reader will be distracted by the readable content of a
                             page at its layout.</p>
                     </div>
@@ -200,8 +200,8 @@
                 <div class="col-lg-4 col-md-6 col-12">
                     <!-- Start Single Feature -->
                     <div class="single-feature wow fadeInUp" data-wow-delay=".6s">
-                        <i class="lni lni-layers"></i>
-                        <h3>Database Backups</h3>
+                        <i class="lni lni-map-marker"></i>
+                        <h3>Reserva En Tu Local Cercano Favorito</h3>
                         <p>It is a long established fact that a reader will be distracted by the readable content of a
                             page at its layout.</p>
                     </div>
@@ -229,19 +229,19 @@
                         <div class="col-lg-4 col-md-4 col-12">
                             <div class="single-achievement wow fadeInUp" data-wow-delay=".2s">
                                 <h3 class="counter"><span id="secondo1" class="countup" cup-end="100">100</span>%</h3>
-                                <p>satisfaction</p>
+                                <p>Negocios</p>
                             </div>
                         </div>
                         <div class="col-lg-4 col-md-4 col-12">
                             <div class="single-achievement wow fadeInUp" data-wow-delay=".4s">
                                 <h3 class="counter"><span id="secondo2" class="countup" cup-end="120">120</span>K</h3>
-                                <p>Happy Users</p>
+                                <p>Usuarios Registrados</p>
                             </div>
                         </div>
                         <div class="col-lg-4 col-md-4 col-12">
                             <div class="single-achievement wow fadeInUp" data-wow-delay=".6s">
                                 <h3 class="counter"><span id="secondo3" class="countup" cup-end="125">125</span>k+</h3>
-                                <p>Downloads</p>
+                                <p>Descargas</p>
                             </div>
                         </div>
                     </div>
@@ -257,26 +257,26 @@
             <div class="row">
                 <div class="col-12">
                     <div class="section-title">
-                        <h3 class="wow zoomIn" data-wow-delay=".2s">pricing</h3>
-                        <h2 class="wow fadeInUp" data-wow-delay=".4s">Pricing Plan</h2>
+                        <h3 class="wow zoomIn" data-wow-delay=".2s">precios</h3>
+                        <h2 class="wow fadeInUp" data-wow-delay=".4s">Planes Mensuales</h2>
                         <p class="wow fadeInUp" data-wow-delay=".6s">There are many variations of passages of Lorem
                             Ipsum available, but the majority have suffered alteration in some form.</p>
                     </div>
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-3 col-md-6 col-12">
+                <div class="col-lg-6 col-md-6 col-12">
                     <!-- Single Table -->
                     <div class="single-table wow fadeInUp" data-wow-delay=".2s">
                         <!-- Table Head -->
                         <div class="table-head">
-                            <h4 class="title">Hobby</h4>
+                            <h4 class="title">Reservar Turnos</h4>
                             <p>All the basics for starting a new business</p>
                             <div class="price">
-                                <h2 class="amount">$12<span class="duration">/mo</span></h2>
+                                <h2 class="amount">FREE<span class="duration"> por siempre ❤</span></h2>
                             </div>
                             <div class="button">
-                                <a href="javascript:void(0)" class="btn">Buy Hobby</a>
+                                <a href="javascript:void(0)" class="btn">Comenzar</a>
                             </div>
                         </div>
                         <!-- End Table Head -->
@@ -296,80 +296,19 @@
                     </div>
                     <!-- End Single Table-->
                 </div>
-                <div class="col-lg-3 col-md-6 col-12">
-                    <!-- Single Table -->
-                    <div class="single-table wow fadeInUp" data-wow-delay=".4s">
-                        <!-- Table Head -->
-                        <div class="table-head">
-                            <h4 class="title">Freelancer</h4>
-                            <p>All the basics for starting a new business</p>
-                            <div class="price">
-                                <h2 class="amount">$24<span class="duration">/mo</span></h2>
-                            </div>
-                            <div class="button">
-                                <a href="javascript:void(0)" class="btn">Buy Freelancer</a>
-                            </div>
-                        </div>
-                        <!-- End Table Head -->
-                        <!-- Start Table Content -->
-                        <div class="table-content">
-                            <h4 class="middle-title">What's Included</h4>
-                            <!-- Table List -->
-                            <ul class="table-list">
-                                <li><i class="lni lni-checkmark-circle"></i> Cras justo odio.</li>
-                                <li><i class="lni lni-checkmark-circle"></i> Dapibus ac facilisis in.</li>
-                                <li><i class="lni lni-checkmark-circle"></i> Morbi leo risus.</li>
-                                <li><i class="lni lni-checkmark-circle"></i> Potenti felis, in cras ligula.</li>
-                            </ul>
-                            <!-- End Table List -->
-                        </div>
-                        <!-- End Table Content -->
-                    </div>
-                    <!-- End Single Table-->
-                </div>
-                <div class="col-lg-3 col-md-6 col-12">
-                    <!-- Single Table -->
-                    <div class="single-table wow fadeInUp" data-wow-delay=".6s">
-                        <!-- Table Head -->
-                        <div class="table-head">
-                            <h4 class="title">Startup</h4>
-                            <p>All the basics for starting a new business</p>
-                            <div class="price">
-                                <h2 class="amount">$32<span class="duration">/mo</span></h2>
-                            </div>
-                            <div class="button">
-                                <a href="javascript:void(0)" class="btn">Buy Startup</a>
-                            </div>
-                        </div>
-                        <!-- End Table Head -->
-                        <!-- Start Table Content -->
-                        <div class="table-content">
-                            <h4 class="middle-title">What's Included</h4>
-                            <!-- Table List -->
-                            <ul class="table-list">
-                                <li><i class="lni lni-checkmark-circle"></i> Cras justo odio.</li>
-                                <li><i class="lni lni-checkmark-circle"></i> Dapibus ac facilisis in.</li>
-                                <li><i class="lni lni-checkmark-circle"></i> Morbi leo risus.</li>
-                                <li><i class="lni lni-checkmark-circle"></i> Potenti felis, in cras ligula.</li>
-                            </ul>
-                            <!-- End Table List -->
-                        </div>
-                        <!-- End Table Content -->
-                    </div>
-                    <!-- End Single Table-->
-                </div>
-                <div class="col-lg-3 col-md-6 col-12">
+
+                <div class="col-lg-6 col-md-6 col-12">
                     <!-- Single Table -->
                     <div class="single-table wow fadeInUp" data-wow-delay=".8s">
                         <!-- Table Head -->
                         <div class="table-head">
-                            <h4 class="title">Enterprise</h4>
+                            <h4 class="title">Publicar tu Negocio</h4>
                             <p>All the basics for starting a new business</p>
                             <div class="price">
-                                <h2 class="amount">$48<span class="duration">/mo</span></h2>
+                                <h2 class="amount">$48<span class="duration">/mes</span></h2>
                             </div>
                             <div class="button">
-                                <a href="javascript:void(0)" class="btn">Buy Enterprise</a>
+                                <a href="javascript:void(0)" class="btn">Registrarse</a>
                             </div>
                         </div>
                         <!-- End Table Head -->
@@ -400,12 +339,12 @@
             <div class="row">
                 <div class="col-lg-8 offset-lg-2 col-md-12 col-12">
                     <div class="cta-content">
-                        <h2 class="wow fadeInUp" data-wow-delay=".2s">You are using free Lite <br>Version of Appvilla
+                        <h2 class="wow fadeInUp" data-wow-delay=".2s">Ya Esta Todo Listo <br>Realiza Tu Reserva Ahora
                         </h2>
                         <p class="wow fadeInUp" data-wow-delay=".4s">Please, purchase full version of the template to
                             get all pages, features and commercial license.</p>
                         <div class="button wow fadeInUp" data-wow-delay=".6s">
-                            <a href="javascript:void(0)" class="btn">Purchase Now</a>
+                            <a href="javascript:void(0)" class="btn">Entrar</a>
                         </div>
                     </div>
                 </div>
