--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                                         </ul>
                                     </li>
                                     <li class="nav-item">
-                                        <a href="javascript:void(0)" aria-label="Toggle navigation">Contact</a>
+                                        <a href="contact.html" aria-label="Toggle navigation">Contact</a>
                                     </li>
                                 </ul>
                             </div> <!-- navbar collapse -->
@@ -112,7 +112,7 @@
             <div class="row align-items-center">
                 <div class="col-lg-5 col-md-12 col-12">
                     <div class="hero-content">
-                        <h1 class="wow fadeInLeft" data-wow-delay=".4s">El Medio Indicado Para Formar Conexiones.</h1>
+                        <h1 class="wow fadeInLeft" data-wow-delay=".4s">Reservando Tu Turno Al Momento.</h1>
                         <p class="wow fadeInLeft" data-wow-delay=".6s">From open source to pro services, Piqes helps you
                             to build, deploy, test, and monitor apps.</p>
                         <div class="button wow fadeInLeft" data-wow-delay=".8s">
@@ -139,7 +139,8 @@
                 <div class="col-12">
                     <div class="section-title">
                         <h3 class="wow zoomIn" data-wow-delay=".2s">Features</h3>
-                        <h2 class="wow fadeInUp" data-wow-delay=".4s">Your Experience Gets Better And Better Over Time.
+                        <h2 class="wow fadeInUp" data-wow-delay=".4s">Su experiencia se vuelve cada vez mejor con el
+                            tiempo.
                         </h2>
                         <p class="wow fadeInUp" data-wow-delay=".6s">There are many variations of passages of Lorem
                             Ipsum available, but the majority have suffered alteration in some form.</p>
@@ -333,6 +334,136 @@
     </section>
     <!--/ End Pricing Table Area -->
 
+
+    <section class="faq section">
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <div class="section-title">
+                        <h3 class="wow zoomIn" data-wow-delay=".2s">Faq</h3>
+                        <h2 class="wow fadeInUp" data-wow-delay=".4s">Preguntas Frecuentes</h2>
+                        <p class="wow fadeInUp" data-wow-delay=".6s">There are many variations of passages of Lorem
+                            Ipsum available, but the majority have suffered alteration in some form.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12">
+                    <div class="accordion" id="accordionExample">
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="headingOne">
+                                <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                                    <span class="title"><span class="serial">01</span>How Do I Contact Customer
+                                        Services?</span><i class="lni lni-plus"></i>
+                                </button>
+                            </h2>
+                            <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
+                                data-bs-parent="#accordionExample">
+                                <div class="accordion-body">
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam consectetur sit
+                                        amet ante nec vulputate. Nulla aliquam, justo auctor consequat tincidunt, arcu
+                                        erat mattis lorem, lacinia lacinia dui enim at eros. Pellentesque ut gravida
+                                        augue. Duis ac dictum tellus</p>
+                                    <p>Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry
+                                        richardson ad squid. 3 wolf moon officia aute. non cupidatat skateboard dolor
+                                        brunch. Foosd truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor,
+                                        sunt alqua put a bird on it squid single-origin coffee nulla assumenda
+                                        shoreditch et. Nihil anim ke ffiyeh helvetica, craft beer labore wes anderson
+                                        cred nesciunt sapiente ea proident.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="headingTwo">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                                    <span class="title"><span class="serial">02</span> Material types can you work
+                                        with?</span><i class="lni lni-plus"></i>
+                                </button>
+                            </h2>
+                            <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
+                                data-bs-parent="#accordionExample">
+                                <div class="accordion-body">
+                                    <p>Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry
+                                        richardson ad squid. 3 wolf moon officia aute. non cupidatat skateboard dolor
+                                        brunch. Foosd truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor,
+                                        sunt alqua put a bird on it squid single-origin coffee nulla assumenda
+                                        shoreditch et. Nihil anim ke ffiyeh helvetica, craft beer labore wes anderson
+                                        cred nesciunt sapiente ea proident.</p>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam consectetur sit
+                                        amet ante nec vulputate. Nulla aliquam, justo auctor consequat tincidunt, arcu
+                                        erat mattis lorem, lacinia lacinia dui enim at eros. Pellentesque ut gravida
+                                        augue. Duis ac dictum tellus</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="headingThree">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                                    <span class="title"><span class="serial">03</span>Can I have multiple activities in
+                                        a single feature?</span><i class="lni lni-plus"></i>
+                                </button>
+                            </h2>
+                            <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
+                                data-bs-parent="#accordionExample">
+                                <div class="accordion-body">
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas expedita,
+                                        repellendus est nemo cum quibusdam optio, voluptate hic a tempora facere, nihil
+                                        non itaque alias similique quas quam odit consequatur.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="headingFour">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                                    <span class="title"><span class="serial">04</span>How Clients Can Consult With
+                                        online?</span><i class="lni lni-plus"></i>
+                                </button>
+                            </h2>
+                            <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour"
+                                data-bs-parent="#accordionExample">
+                                <div class="accordion-body">
+                                    <p>Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry
+                                        richardson ad squid. 3 wolf moon officia aute. non cupidatat skateboard dolor
+                                        brunch. Foosd truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor,
+                                        sunt alqua put a bird on it squid single-origin coffee nulla assumenda
+                                        shoreditch et.</p>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident iure ab nisi,
+                                        magnam vitae. Laboriosam laborum suscipit recusandae officia laudantium,
+                                        consectetur adipisci voluptates doloremque quisquam. Id rerum iusto
+                                        reprehenderit assumenda!</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="headingFive">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
+                                    <span class="title"><span class="serial">05</span>Can I share resources between
+                                        features?</span><i class="lni lni-plus"></i>
+                                </button>
+                            </h2>
+                            <div id="collapseFive" class="accordion-collapse collapse" aria-labelledby="headingFive"
+                                data-bs-parent="#accordionExample">
+                                <div class="accordion-body">
+                                    <p>Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry
+                                        richardson ad squid. 3 wolf moon officia aute. non cupidatat skateboard dolor
+                                        brunch. Foosd truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor,
+                                        sunt alqua put a bird on it squid single-origin coffee nulla assumenda
+                                        shoreditch et. </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
     <!-- Start Call To Action Area -->
     <section class="section call-action">
         <div class="container">
@@ -364,7 +495,7 @@
                         <div class="single-footer f-about">
                             <div class="logo">
                                 <a href="index.html">
-                                    <img src="assets/images/logo/white-logo.svg" alt="#">
+                                    <img src="assets/images/logo/logopremiky2.png" alt="#">
                                 </a>
                             </div>
                             <p>Making the world a better place through constructing elegant hierarchies.</p>
