Armado de sitio web

--- a/index.html
+++ b/index.html
@@ -112,9 +112,8 @@
             <div class="row align-items-center">
                 <div class="col-lg-5 col-md-12 col-12">
                     <div class="hero-content">
-                        <h1 class="wow fadeInLeft" data-wow-delay=".4s">Reservando Tu Turno Al Momento.</h1>
-                        <p class="wow fadeInLeft" data-wow-delay=".6s">From open source to pro services, Piqes helps you
-                            to build, deploy, test, and monitor apps.</p>
+                        <h1 class="wow fadeInLeft" data-wow-delay=".4s">Todos tus turnos en un solo lugar</h1>
+                        <h4 class="wow fadeInLeft" data-wow-delay=".6s" style="color: white;">Descarga la app gratis ya!</h4>
                         <div class="button wow fadeInLeft" data-wow-delay=".8s">
                             <a href="javascript:void(0)" class="btn"><i class="lni lni-apple"></i> App Store</a>
                             <a href="javascript:void(0)" class="btn btn-alt"><i class="lni lni-play-store"></i> Google
@@ -124,7 +123,7 @@
                 </div>
                 <div class="col-lg-7 col-md-12 col-12">
                     <div class="hero-image wow fadeInRight" data-wow-delay=".4s">
-                        <img src="assets/images/hero/phone.png" alt="#">
+                        <img src="assets/images/hero/Celu4.png" alt="#">
                     </div>
                 </div>
             </div>
@@ -138,12 +137,9 @@
             <div class="row">
                 <div class="col-12">
                     <div class="section-title">
-                        <h3 class="wow zoomIn" data-wow-delay=".2s">Features</h3>
-                        <h2 class="wow fadeInUp" data-wow-delay=".4s">Su experiencia se vuelve cada vez mejor con el
-                            tiempo.
+                        <h2 class="wow fadeInUp" data-wow-delay=".4s">Cambia la manera en la que organizas tus turnos
                         </h2>
-                        <p class="wow fadeInUp" data-wow-delay=".6s">There are many variations of passages of Lorem
-                            Ipsum available, but the majority have suffered alteration in some form.</p>
+                        <p class="wow fadeInUp" data-wow-delay=".6s">Con Premiky podras optimizar tus reservas aprovechando al máximo sus ultimas novedades.</p>
                     </div>
                 </div>
             </div>
@@ -153,8 +149,8 @@
                     <div class="single-feature wow fadeInUp" data-wow-delay=".2s">
                         <i class="lni lni-calendar"></i>
                         <h3>Calendario</h3>
-                        <p>It is a long established fact that a reader will be distracted by the readable content of a
-                            page at its layout.</p>
+                        <p>Saca provecho de esta herramienta para organizar tus reservas y turnos.
+                        </p>
                     </div>
                     <!-- End Single Feature -->
                 </div>
@@ -162,9 +158,9 @@
                     <!-- Start Single Feature -->
                     <div class="single-feature wow fadeInUp" data-wow-delay=".4s">
                         <i class="lni lni-lock"></i>
-                        <h3>Protejemos sus Datos</h3>
-                        <p>It is a long established fact that a reader will be distracted by the readable content of a
-                            page at its layout.</p>
+                        <h3>Seguridad</h3>
+                        <p>En Premiky protejemos tus datos para garantizar un sistema seguro.
+                        </p>
                     </div>
                     <!-- End Single Feature -->
                 </div>
@@ -172,9 +168,9 @@
                     <!-- Start Single Feature -->
                     <div class="single-feature wow fadeInUp" data-wow-delay=".6s">
                         <i class="lni lni-handshake"></i>
-                        <h3>Ganar Nuevos Clientes</h3>
-                        <p>It is a long established fact that a reader will be distracted by the readable content of a
-                            page at its layout.</p>
+                        <h3>Alcance</h3>
+                        <p>Genera nuevos clientes y publicita tu negocio.
+                        </p>
                     </div>
                     <!-- End Single Feature -->
                 </div>
@@ -182,9 +178,9 @@
                     <!-- Start Single Feature -->
                     <div class="single-feature wow fadeInUp" data-wow-delay=".2s">
                         <i class="lni lni-stats-up"></i>
-                        <h3>Aumente sus Ventas</h3>
-                        <p>It is a long established fact that a reader will be distracted by the readable content of a
-                            page at its layout.</p>
+                        <h3>Crecimiento</h3>
+                        <p>Genera una gran expansion de tu negocio en corto plazo.
+                        </p>
                     </div>
                     <!-- End Single Feature -->
                 </div>
@@ -192,9 +188,9 @@
                     <!-- Start Single Feature -->
                     <div class="single-feature wow fadeInUp" data-wow-delay=".4s">
                         <i class="lni lni-cog"></i>
-                        <h3>Potentes Herramientas</h3>
-                        <p>It is a long established fact that a reader will be distracted by the readable content of a
-                            page at its layout.</p>
+                        <h3>Herramientas</h3>
+                        <p>Tenemos una configuracion personalizada para cada usuario/cliente. Proba la tuya!
+                        </p>
                     </div>
                     <!-- End Single Feature -->
                 </div>
@@ -202,9 +198,9 @@
                     <!-- Start Single Feature -->
                     <div class="single-feature wow fadeInUp" data-wow-delay=".6s">
                         <i class="lni lni-map-marker"></i>
-                        <h3>Reserva En Tu Local Cercano Favorito</h3>
-                        <p>It is a long established fact that a reader will be distracted by the readable content of a
-                            page at its layout.</p>
+                        <h3>Cerca Tuyo</h3>
+                        <p>Conectate con tus locales cercanos y favoritos en todo momento.
+                        </p>
                     </div>
                     <!-- End Single Feature -->
                 </div>
@@ -219,8 +215,8 @@
             <div class="row">
                 <div class="col-lg-10 offset-lg-1 col-md-12 col-12">
                     <div class="title">
-                        <h2>Trusted by developers from over 80 planets</h2>
-                        <p>There are many variations of passages of Lorem Ipsum available, but the majority.</p>
+                        <h2>Validados por nuestros clientes y usuarios mas exigentes</h2>
+                        <h5 style="color: white;">Contamos con la aprobacion y constante comunicacion con nuestros usuarios para garantizar la mejor experiencia</h5>
                     </div>
                 </div>
             </div>
@@ -229,20 +225,17 @@
                     <div class="row">
                         <div class="col-lg-4 col-md-4 col-12">
                             <div class="single-achievement wow fadeInUp" data-wow-delay=".2s">
-                                <h3 class="counter"><span id="secondo1" class="countup" cup-end="100">100</span>%</h3>
-                                <p>Negocios</p>
+                                <h3 class="counter">Q&A</h3>
                             </div>
                         </div>
                         <div class="col-lg-4 col-md-4 col-12">
                             <div class="single-achievement wow fadeInUp" data-wow-delay=".4s">
-                                <h3 class="counter"><span id="secondo2" class="countup" cup-end="120">120</span>K</h3>
-                                <p>Usuarios Registrados</p>
+                                <h3 class="counter">SOPORTE 24HS</h3>
                             </div>
                         </div>
                         <div class="col-lg-4 col-md-4 col-12">
                             <div class="single-achievement wow fadeInUp" data-wow-delay=".6s">
-                                <h3 class="counter"><span id="secondo3" class="countup" cup-end="125">125</span>k+</h3>
-                                <p>Descargas</p>
+                                <h3 class="counter">BUG REPORTS</h3>
                             </div>
                         </div>
                     </div>
@@ -258,10 +251,9 @@
             <div class="row">
                 <div class="col-12">
                     <div class="section-title">
-                        <h3 class="wow zoomIn" data-wow-delay=".2s">precios</h3>
-                        <h2 class="wow fadeInUp" data-wow-delay=".4s">Planes Mensuales</h2>
-                        <p class="wow fadeInUp" data-wow-delay=".6s">There are many variations of passages of Lorem
-                            Ipsum available, but the majority have suffered alteration in some form.</p>
+                        <h2 class="wow fadeInUp" data-wow-delay=".4s">Planes</h2>
+                        <p class="wow fadeInUp" data-wow-delay=".6s">Elige tu propia experiencia de acuerdo a tus necesidades y enfoques.
+                        </p>
                     </div>
                 </div>
             </div>
