--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
     <meta property="twitter:image" content="https://premiky.com/assets/images/logo_premiky.png">
 
     <meta charset="utf-8" />
-    <html lang = "es"></html>
+    <meta lang = "es"/>
+    <link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon.ico" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon.ico" />
 
     <!-- ========================= CSS here ========================= -->
     <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
